--- a/course.yml
+++ b/course.yml
@@ -1,4 +1,4 @@
-title: Course Title Here
-description: A description of the course.
+title: Introduction to using R in finance
+description: This course takes you from no prior R experience all the way to being able to run analyze stocks, form portfolios and plot financial data.
 programming_language: r
 from: 'r-base-prod:v1.0.0'
